--- a/index.html
+++ b/index.html
@@ -46,8 +46,73 @@
             margin: 10px;
             cursor: pointer;
         }
+
+        body {
+            font-family: Arial, sans-serif;
+        }
+
+        header {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            background-color: #333;
+            color: #fff;
+            padding: 10px 20px;
+            margin: 0; /* Adicionado para remover o espaço da borda */
+        }
+
+        nav ul {
+            list-style-type: none;
+        }
+
+        nav ul li {
+            display: inline-block;
+            margin: 0 10px;
+        }
+
+        nav ul li a {
+            text-decoration: none;
+            color: #fff;
+        }
+
+        main {
+            padding: 20px;
+        }
+
+        section {
+            margin-bottom: 50px; /* Aumentei o espaço para separar visualmente as seções */
+        }
+
+        h2 {
+            margin-bottom: 10px;
+            border-bottom: 1px solid #ccc; /* Adiciona uma linha divisória */
+        }
+
+        .about-content {
+            display: flex;
+            justify-content: space-between;
+        }
+
+        .about-text {
+            max-width: 50%;
+        }
+
+        .about-text p {
+            font-size: 1.2em;
+        }
+
+        .about-image img {
+            max-width: 75%;
+            height: auto;
+        }
+
+        .contact-icons a {
+            display: inline-block;
+            margin-right: 10px;
+        }
     </style>
 </head>
+
 
 <body>
     <header>
